<resources>
    <string name="app_name">Team_J-Sport</string>

    <!--    FCM -->
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="msg_subscribed">Subscribed to user\'s own topic</string>
    <string name="msg_subscribe_failed">Failed to subscribe to user\'s own topic</string>
    <string name="msg_unsubscribed">Unsubscribed to user\'s own topic</string>
    <string name="msg_unsubscribe_failed">Failed to unsubscribe to user\'s own topic</string>
    <string name="post">Post</string>
    <string name="event">Event</string>
    <string name="me">Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Event_Title">Title</string>
    <string name="Event_Summary">Summary</string>
    <string name="Event_Description">Description</string>
    <string name="Event_Location">Location</string>
    <string name="Event_LimitPerson">Limit Person</string>
    <string name="Event_Contact">Contact</string>
    <string name="Event_Time">Time</string>
    <string name="Event_Date">Date</string>
    <string name="textview">TextView</string>
    <string name="tv_my_posts">My Posts</string>
    <string name="tv_my_events">My Events</string>
    <string name="tv_change_password">Change Password</string>
    <string name="join">join</string>
    <string name="Event_Name">Name</string>
    <string name="post_list">Post List</string>
    <string name="delete">DELETE</string>

</resources>