<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/tab_post"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ib_navi_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="#FFFFFF"
            android:src="@drawable/navi_post_normal"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_navi_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/post"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_event"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ib_navi_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="#FFFFFF"
            android:src="@drawable/navi_event_normal"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_navi_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:gravity="center"
            android:background="#FFFFFF"
            android:text="@string/event"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_me"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#FFFFFF"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/ib_navi_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="#FFFFFF"
            android:src="@drawable/navi_me_normal"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_navi_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:gravity="center"
            android:background="#FFFFFF"
            android:text="@string/me"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>